@@ -5,8 +5,8 @@ DISCOVERY_PERIOD = 10   			# For discovering topology.
 
 MONITOR_PERIOD = 10					# For monitoring traffic
 
-DELAY_DETECTING_PERIOD = 10			# For detecting link delay.
+DELAY_DETECTING_PERIOD = 5			# For detecting link delay.
 
-TOSHOW = False						# For showing information in terminal
+TOSHOW = True						# For showing information in terminal
 	
 MAX_CAPACITY = 281474976710655L		# Max capacity of link
